# tasks-manager

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.dev.yaml  docker-compose.override.example.yaml  docker-compose.override.yml.example  docker-compose.yaml  docker-compose.yml  justfile  manage.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js  vite.config.js
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml
core/: asgi.py  context_processors.py  token.py  urls.py  views.py  wsgi.py
core/auth/: remote_user_backend.py
core/filesystem_backends/: __init__.py  helper.py  samba.py
core/settings/: base.py  development.py  production.py  test.py
core/templatetags/: form_tags.py  sprite_tags.py
frontend/css/: main.css
frontend/docker/: Dockerfile
frontend/js/: base.js  charts.js  dashboard.js  documents.js
nirvana/: apps.py
sprites/: all-gen.sh
task_processor/: __init__.py  apps.py  celery.py  constants.py  forms.py  models.py  routing.py  search.py  services.py  signals.py  tasks.py  urls.py  views.py
task_processor/migrations/: 0001_initial.py  0002_change_context_to_manytomany.py  0003_add_nirvana_id.py  0004_alter_item_title_item_task_proces_nirvana_76df99_idx.py  0005_item_energy.py  0006_alter_item_created_at.py  0007_tag_item_tags_tag_task_proces_user_id_728123_idx_and_more.py  0008_itemreminderlog_item_remind_at_item_rrule_and_more.py  0009_itemreminderlog_updated_at_and_more.py  (+4 more)
templates/: base.html  dashboard.html  inbox.html
(+60 files in other folders)
