[project]
name = "tasks-proto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.5.3",
    "channels>=4.0.0",
    "channels-redis>=4.2.0",
    "django>=5.2.6",
    "django-celery-beat>=2.7.0",
    "django-viewflow>=2.2.12",
    "django-unfold>=0.47.0",
    "flower>=2.0.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "python-dateutil>=2.9.0",
    "python-dotenv>=1.1.1",
    "redis>=6.4.0",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.35.0",
    "whitenoise>=6.9.0",
    "django-vite>=3.1.0",
    "dj-email-url>=1.0.6",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.0.0",
    "django-extensions>=4.1",
    "factory-boy>=3.3.3",
    "ipython>=9.5.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-django>=4.11.1",
    "ruff>=0.12.11",
]

[tool.ruff.lint]
select = ["F", "I", "T10"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"core/settings/*.py" = ["F405", "F403"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings.test"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
